--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0"
   },
   "devDependencies": {
@@ -19,5 +20,3 @@
     "supertest": "^7.1.1"
   }
 }
-
-
